# animated-octo-tribble

./: CMakeLists.txt  README.md  crack.h  playfair.h  playpair.cpp  q1.cpp  q1.txt  q2.cpp  q2.txt  q34.py  references  score.cpp  score.h  substitution.cpp  substitution.h
